--- a/subethaedit/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.2 (SEE 3.0.2)
+
+    *) fixed non-recognition of Symbols
+
 Changes with Version 1.1
     
     *) EXTENSIONS: Added uppercase variants where appropriate.
