--- a/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
+++ b/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,9 @@
+Changes with Version 1.3 (SEE 3.1)
+
+    *) structure keywords bold
+    *) inline math state
+    *) adding scripts by Michael J. Barber
+
 Changes with Version 1.2 (SEE 3.0.2)
 
     *) fixed non-recognition of Symbols
