- fixed an issue with the mode recognition strings that did want to have #<?xml instead of <?xml at start of file

--- a/subethaedit/Modes/XML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/XML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 1.5  (SEE 3.5)
+	 *) fixed mode recognition string
+	 *) added code folding
+
 Changes with Version 1.4  (SEE 2.6.4)
    *) fixed the validate scripts to work with unicode and leopard
    *) fixed the validate scripts to work with tabs
