--- a/subethaedit/Modes/Base.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Base.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added URL state
+
 Changes with Version 1.2 (SEE 2.3)
     
     *) Enabled system dictionary completion.
