--- a/subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.5 (SEE 2.6)
 
     *) Removing whitespace before and after headline symbols in popup
