--- a/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.6 (SEE 3.0.2)
 
     *) Added recognition of inline RegExes
