--- a/subethaedit/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt
@@ -1,13 +1,13 @@
-Changes with Version 1.3 (SEE 3.1)
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
 
+Changes with Version 1.3 (SEE 3.1)
     *) structure keywords bold
     *) inline math state
     *) adding scripts by Michael J. Barber
 
 Changes with Version 1.2 (SEE 3.0.2)
-
     *) fixed non-recognition of Symbols
 
 Changes with Version 1.1
-    
     *) EXTENSIONS: Added uppercase variants where appropriate.
