--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.9 (SEE 2.6.4)
     *) Added missing NSViewAnimation... constants
     *) Added Objective-C 2.0 syntax
