--- a/subethaedit/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-J.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.6 (SEE 2.5.1)
     *) Uncomment script had wrong icon.
 
