--- a/subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.2 (SEE 2.3)
 
     *) SYMBOLS: Fixed SEE-490.
