--- a/subethaedit/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Perl.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.7 (SEE 2.6.4)
     *) Fixes more problems with states for regex and quotes.
     *) fixed the validate scripts to work with unicode and leopard
