--- a/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added (some) code folding
+
 Changes with Version 1.6 (SEE 2.6.4)
     *) fixed the validate scripts to work with tabs
     *) fixed the validate scripts to work with unicode and leopard
