--- a/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt
@@ -1,5 +1,5 @@
-Changes with Version 3.5 (SEE 3.5)
-    *) added folding support
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
 
 Changes with Version 3.0 (SEE 2.7)
     *) removed ERB and put it into a new mode
