--- a/subethaedit/Modes/SQL.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/SQL.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.2 (SEE 2.5)
     
     *) Fixed SEE-942: SQL mode does not respect backtick strings.
