--- a/subethaedit/Modes/SVNLog.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/SVNLog.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+
 Changes with Version 1.0 (SEE 3.0)
     
     *) made it look nice for "svn log"
