--- a/subethaedit/Modes/bash.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/bash.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes with Version 3.5  (SEE 3.5)
+	 *) added code folding
+     *) Various improvements
+
 Changes with Version 1.1 (SEE 2.5)
 
     *) Fixing standard location for bash and being more liberal about shebangs for bash.mode.
