--- a/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes with Version 3.5.1  (SEE 3.5.1)
+	 *) added CG functions and constants
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
