--- a/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
+++ b/subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes with Version 3.5.1  (SEE 3.5.1)
+	 *) fixed highlighting issue with number 0
+	 *) fixed highlighting issue with state based contents of for, if, etc. blocks
+	 *) added missing keywords
+
 Changes with Version 3.5  (SEE 3.5)
 	 *) added code folding
 
